Fix Sonar issues in co-expression code
- Replace @RequestMapping(method=POST) with @PostMapping
- Replace generic Exception with specific checked exceptions
- Replace Stream.collect(Collectors.toList()) with Stream.toList()
- Remove unnecessary eq() wrappers in Mockito verify calls

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>